kubernetes/apps/utilities/notes-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: utilities
  name: notes-app
  labels:
    app: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
        - name: notes-app
          image: ghcr.io/enchant97/note-mark-aio:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
          readinessProbe:
            httpGet:
              path: /
              port: 10000
          resources:
            requests:
              memory: 10Mi
              cpu: 10m
            limits:
              memory: 64Mi
              cpu: 250m
          volumeMounts:
            - name: db-storage
              mountPath: /data
      volumes:
        - name: db-storage
          emptyDir: {}
