kubernetes/apps/utilities/notes-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notes-app
  namespace: utilities
spec:
  type: ClusterIP
  ports:
    - port: 10000
      protocol: TCP
      name: web-ui
      targetPort: 10000
  selector:
    app: notes-app
